in jargon-core, and should be treated as early access.  As the implementation moves forward in jargon-core, the genquery facilities
in the classic Jargon API will get a port of the new facility.

-----------
*added support and began adding unit tests using mock objects

-----------
Refactoring

*factoring classic GenQuery processing from IRODSCommands
*add IRODSServerProperties object that describes the connected-to server
*new irodsFunction() methods to prepare for factoring out packing instructions into individual implementation classes.
*other code cleanup activities

-----------
*Bug 94  - add mkdirs() to create intermediate files - added mkdirs() capability to IRODSfile

-----------
*Bug 103  - add mod avu capability

------------
*Bug 104  - long value in MetaDataRecordList 

------------
*Bug 109 - NullPointerException possible from logging statement in IRODSMetaDataSet.java

------------
*Bug 110 - error when asking IRODSFile.exists with & in file name unit testing.  This is noted as an outstanding iRODS issue.  

------------
*made methods to retrieve misc server info public.

------------
*Bug 111 - Protocol exception returning binary (base64 encoded) data from execution of script 
Test cases, updated exec command method signatures to clean up unnecessary parms

================================================================================================
Outstanding Issues

Please consult https://www.irods.org/bugzilla/buglist.cgi?query_format=specific&order=relevance+desc&bug_status=__open__&product=&content=jargon

for the latest open bugs and Jargon feature requests

================================================================================================
Documentation and Installation

-See the README.txt in this distribution
-Review Jargon documentation at: http://www.irods.org/index.php/Jargon
-Review information at the IRODS web site: http://www.irods.org